1) Pdf grid issue display fix, 2) Nav menu active on select 3) Nav menu center align, css changes

--- a/frontend/src/pages/pdf/PdfPage.module.css
+++ b/frontend/src/pages/pdf/PdfPage.module.css
@@ -1,12 +1,4 @@
 .pdfdocument {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    justify-content: center;
   }
-
-.pdfpage {
-    margin: 10px auto;
-  }
-
-.overflowScroll{
-    overflow: scroll
-}
